ajout page logt et error

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,68 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import './minireset.scss';
+
+@keyframes anim_img_back {
+    from{
+        opacity: 0;
+        transform: translateX(+1240px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes anim_img_next {
+    from{
+        opacity: 0;
+        transform: translateX(-1240px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+
+@keyframes  anim_blk_close{ 
+    from{
+        opacity: 1;
+        transform: translateY(0px);
+        
+    }
+    to{
+        opacity: 0;
+        transform: translateY(-20px);
+        display: none;
+    }
+}
+
+
+@keyframes anim_blk { 
+    from{
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+
+
+* {
+    box-sizing: border-box;
+ }
+
+ body{
+    color:#000000;
+    font-family: Montserrat,sans-serif;
+    font-size: 1rem;
+ }
 
 /*
 Styles block header 
@@ -24,13 +86,23 @@ Styles block header
         font-size: 1.5em;
         line-height: 2em;
         width: 310px;
+        &__lnk{
+            color:black;
+            font-weight: 500;
+            text-decoration: none;
+        }
+    
+        &__lnkActif{
+            color:black;
+            font-weight: 500;
+            text-decoration: underline;
+        }
+
+
     }
 
-    & a{
-        color:black;
-        text-decoration: none;
-        font-weight: 500;
-    }
+
+
 }
 
 
@@ -89,7 +161,6 @@ Styles block Body
     }
 }
 
-
 /* style Cardthumb */
 
 .cardthumb{
@@ -113,7 +184,7 @@ Styles block Body
         position:absolute;
         top:268px;
         left: 20px;
-
+        font-size: 1.2em;
     }
 }
 
@@ -131,7 +202,9 @@ Styles block Body
     font-family: Montserrat, sans-serif;
     color:white;
     background-color: #000000;
+    //transition: transform scaleY(1) 300ms,      
 }
+
 
 
 /* Styles Section valeurs */
@@ -149,6 +222,7 @@ Styles block Body
 
     &__header{
         display:flex;
+        position: relative;
         height: 52px;
         flex-direction: row;
         align-items: center;
@@ -162,22 +236,305 @@ Styles block Body
         font-style: normal;
         font-weight: 700;
 
-        & img{
+        &__icone{
+            width: 32px;
+            height: 32px;
+            background: url("../images/arrow_open.png") no-repeat;
+            transform: rotate(180deg);
+            transition: transform 300ms;
+        }
+
+        &__open{
+            transform: rotate(0deg);
+        }
+
+        &__close{
             transform: rotate(180deg);
         }
+        z-index: 2;
     }
 
     &__content{
-        display: none;
+        display: flex;
+        position: relative;
         background-color: #F6F6F6;
-        //color: #FF6060;
         font-family: Montserrat;
         font-size: 18px;
         font-style: normal;
         font-weight: 400;
         padding: 20px;
+        overflow: hidden;
+        animation : anim_blk 500ms linear both;
+        z-index: 0;
+        &__hidden{
+            animation: anim_blk_close 500ms linear both;
+        }
     }
+
+   
+
+
+
 
 }
 
+/*Styles Fiche logement*/
 
+.carrousel{
+    display: flex;
+    margin: auto;
+    position: relative;
+    width: 1240px;
+    height: 415px;
+    //background: url(https://s3-eu-west-1.amazonaws.com/course.oc-static.com/projects/front-end-kasa-project/accommodation-20-1.jpg) lightgray 50% / cover no-repeat;
+
+
+
+
+    &__img{
+        width: 1240px;
+        object-fit: cover;
+        top:0;
+        left:0;
+    }
+
+    &__next{
+        animation: anim_img_next 1s linear both;
+    }
+    &__back{
+        animation: anim_img_back 1s linear both;
+    }
+
+
+    &__lnk{
+        width: 46px;
+        height: 79px;
+        object-fit: cover;
+        position: absolute;
+        z-index: 1;
+    }
+
+    &__lnkback{
+        @extend .carrousel__lnk;
+        top:167px;
+        left:25px;
+        z-index: 1;
+    }
+
+    &__lnknext{
+        @extend .carrousel__lnk;
+        top:167px;
+        right:25px;
+        z-index: 1;
+    }
+
+    &__nbImg{
+        position:absolute;
+        bottom:10px;
+        width: 1240px;
+        text-align: center;
+        color:white;
+        font-size: 18px;
+        z-index: 1;
+    }
+}
+
+
+
+/* Fiche logement identité */
+
+.host{
+    display:flex;
+    flex-direction: row;
+    width: 250px;
+    align-items: center;
+    justify-content: end;
+    gap:5px;
+    &__ident{
+        display: flex;
+        flex-direction: column;
+        color: #FF6060;
+        text-align: right;
+        font-family: Montserrat;
+        font-size: 18px;
+    }
+    & p{
+        display: flex;
+        margin: 0;
+    }
+
+    & img{
+        width: 64px;
+        height: 64px;
+        border-radius: 50%;
+    }
+}
+
+.tags{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap:10px;
+    margin-top: 30px;;
+
+    &__item{
+        min-width: 115px;
+        height: 25px;
+        padding: 5px 15px 0 15px ;
+        text-align: center;
+        background-color: #FF6060;
+        border-radius: 10px;
+        color:white;
+        font-family: Montserrat;
+        font-size: 14px;
+        font-weight: 700;
+        vertical-align: middle;
+    }
+}
+
+.rating{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.logt{
+    width: 1240px;
+    margin: auto;
+}
+
+.location{
+    display: flex;
+    flex-direction: row;
+    width: 1240px;
+    margin: 25px auto;
+    gap:30px;
+    
+    justify-content: space-between;
+
+    &__host{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+    }
+    
+    & h1{
+        color: #FF6060;
+        //font-family: Montserrat;
+        font-size: 36px;
+        //font-style: normal;
+        font-weight: 500;
+    }
+
+    & h2{
+        color: #000;
+        font-size: 18px;
+        font-weight: 500;
+    }
+}
+
+.detail{
+    width: 1240px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap:30px;
+    margin:50px auto;
+    font-family: Montserrat, sans-serif;
+}
+
+.description{
+    width: 520px;
+    font-family: Montserrat;
+    &__titre{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        color:white;
+        background-color: #FF6060;
+        border-radius: 10px;
+        height: 2em;
+        padding: 0 15px;
+        font-size: 18px;
+        font-weight: 700;
+
+        & img{
+            width: 24px ;
+            height: 14px;
+        }
+
+        & img:hover{
+            cursor: pointer;
+        }
+    }
+    
+    &__content{
+        display:block;
+        background-color: #F6F6F6;
+        padding-left: 15px;
+    }
+}
+
+.equipement{
+    width: 520px;
+    &__titre{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        color:white;
+        background-color: #FF6060;
+        border-radius: 10px;
+        padding: 0 15px;
+        height: 2em;      
+        font-size: 18px;
+        font-weight: 700;
+    }
+
+    & img{
+        width: 24px ;
+        height: 14px;
+    }
+
+    & img:hover{
+        cursor: pointer;
+    }
+
+    &__content{
+        display: block;
+        background-color: #F6F6F6;
+        padding-left: 15px;
+    }
+
+
+}
+
+.hidden{
+    display: none;
+}
+
+.error{
+    display: flex;
+    flex-direction: column;
+    width: 1240px;
+    height: 80vh;
+    justify-content:space-around;
+    align-items: center;
+
+    &__lnk{
+        color: #000;
+        text-decoration: underline;
+        font-size: 18px;
+        font-weight: 500;
+    }
+
+    & h1 {
+        color: #FF6060;
+        font-size: 36px;
+
+font-weight: 500;
+    }
+
+}
