--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,920 +1,17 @@
-@charset "UTF-8";
-/*
-Configuration des variables
-*/
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-/* couleurs de font */
-/* couleur de texte */
-/* font utilisées */
-/* breakpoint media query */
-/*taille affichage */
-/* taille photos */
-/* card */
-/* carrousel */
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-html,
-body,
-p,
-ol,
-ul,
-li,
-dl,
-dt,
-dd,
-blockquote,
-figure,
-fieldset,
-legend,
-textarea,
-pre,
-iframe,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  padding: 0;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 2 | @import './config';
+ *   |         ^^^^^^^^^^
+ *   '
+ *   src\styles\style.scss 2:9  root stylesheet */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 2 \2502  @import './config';\d\a   \2502          ^^^^^^^^^^\a   \2575 \a   src\\styles\\style.scss 2:9  root stylesheet";
 }
-
-ul {
-  list-style: none;
-}
-
-button,
-input,
-select {
-  margin: 0;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
-img,
-video {
-  height: auto;
-  max-width: 100%;
-}
-
-iframe {
-  border: 0;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-td,
-th {
-  padding: 0;
-}
-
-@keyframes anim_blk_close {
-  from {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-  to {
-    opacity: 0;
-    transform: translateY(-20px);
-    height: 0px;
-  }
-}
-@keyframes anim_blk {
-  from {
-    height: 0px;
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-  to {
-    height: auto;
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-* {
-  box-sizing: border-box;
-}
-
-body {
-  color: #000;
-  font-family: Montserrat, sans-serif;
-  font-size: 16px;
-}
-
-/*
-Styles block header 
-*/
-/*
-Styles header
-*/
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 90%;
-  min-width: 335px;
-  margin: 20px auto;
-}
-@media (min-width: 768px) {
-  .header {
-    width: 1240px;
-    margin: 50px auto;
-    align-items: center;
-  }
-}
-.header__nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 1.5em;
-  text-align: right;
-  font-size: 1em;
-  line-height: 1.5em;
-  width: 190px;
-}
-@media (min-width: 768px) {
-  .header__nav {
-    width: 310px;
-    gap: 3em;
-    font-size: 1.5em;
-    line-height: 2em;
-  }
-}
-.header__nav__lnk {
-  color: #000;
-  font-weight: 500;
-  text-decoration: none;
-}
-.header__nav__lnkActif {
-  color: #000;
-  font-weight: 500;
-  text-decoration: underline;
-}
-.header__logo {
-  width: 145px;
-}
-@media (min-width: 768px) {
-  .header__logo {
-    width: 210px;
-  }
-}
-
-/*
-Styles block Body
-*/
-.body-content {
-  display: flex;
-  margin: 20px auto;
-  width: 335px;
-  flex-direction: column;
-  gap: 22px;
-}
-@media (min-width: 768px) {
-  .body-content {
-    margin: 50px auto;
-    width: 1240px;
-    gap: 50px;
-  }
-}
-.body-content__bandeau {
-  background: url("../images/IMG.png") lightgray 50%/cover no-repeat;
-  height: 111px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  border-radius: 25px;
-  color: white;
-}
-@media (min-width: 768px) {
-  .body-content__bandeau {
-    height: 223px;
-  }
-}
-.body-content__bandeau-bis {
-  background: url("../images/Image source 2.png") lightgray 50%/cover no-repeat;
-}
-.body-content__bandeau div {
-  display: flex;
-  width: 100%;
-  height: 111px;
-  background-color: rgba(0, 0, 0, 0.6);
-  justify-content: flex-start;
-  align-items: center;
-  border-radius: 25px;
-  padding-left: 1em;
-}
-@media (min-width: 768px) {
-  .body-content__bandeau div {
-    justify-content: center;
-    height: 223px;
-  }
-}
-.body-content__bandeau div h1 {
-  font-size: 24px;
-  width: 235px;
-  font-weight: 700;
-}
-@media (min-width: 768px) {
-  .body-content__bandeau div h1 {
-    font-size: 48px;
-    width: auto;
-  }
-}
-.body-content__galery {
-  color: #000;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  background-color: #F6F6F6;
-  border-radius: 25px;
-  gap: 22px;
-}
-@media (min-width: 768px) {
-  .body-content__galery {
-    padding: 50px;
-    gap: 50px;
-  }
-}
-
-/* style Cardthumb */
-.cardthumb {
-  position: relative;
-  width: 335px;
-  height: 255px;
-}
-@media (min-width: 768px) {
-  .cardthumb {
-    width: 340px;
-    height: 340px;
-  }
-}
-.cardthumb img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  border-radius: 10px;
-  width: 335px;
-  height: 255px;
-}
-@media (min-width: 768px) {
-  .cardthumb img {
-    width: 340px;
-    height: 340px;
-  }
-}
-.cardthumb__bg-degrad {
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 10px;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3));
-  width: 335px;
-  height: 255px;
-}
-@media (min-width: 768px) {
-  .cardthumb__bg-degrad {
-    width: 340px;
-    height: 340px;
-  }
-}
-.cardthumb h2 {
-  width: 300px;
-  color: #FFF;
-  position: absolute;
-  top: 188px;
-  left: 20px;
-  font-size: 1.2em;
-}
-@media (min-width: 768px) {
-  .cardthumb h2 {
-    width: 300px;
-    top: 268px;
-  }
-}
-
-/* Styles Footer */
-.footer-content {
-  display: flex;
-  background-color: #000;
-  color: #FFF;
-  min-width: 375px;
-  padding: 66px 120px 58px 120px;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  text-align: center;
-  font-size: 12px;
-}
-@media (min-width: 768px) {
-  .footer-content {
-    font-size: 24px;
-    gap: 2em;
-  }
-}
-.footer-content img {
-  width: 122px;
-}
-.footer-content p {
-  width: 100px;
-}
-@media (min-width: 768px) {
-  .footer-content p {
-    width: auto;
-  }
-}
-
-/* Styles Section valeurs */
-.sectvaleur {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 335px;
-  gap: 10px;
-}
-@media (min-width: 768px) {
-  .sectvaleur {
-    width: 1016.8px;
-    gap: 30px;
-  }
-}
-
-.boxArticle__header {
-  display: flex;
-  position: relative;
-  height: 30px;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 30px;
-  background-color: #FF6060;
-  border-radius: 5px;
-  z-index: 2;
-}
-@media (min-width: 768px) {
-  .boxArticle__header {
-    height: 52px;
-    font-size: 24px;
-  }
-}
-.boxArticle__header h2 {
-  color: #FFF;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 700;
-}
-@media (min-width: 768px) {
-  .boxArticle__header h2 {
-    padding-top: 10px;
-    height: 52px;
-    font-size: 24px;
-  }
-}
-.boxArticle__header__icone {
-  width: 32px;
-  height: 32px;
-  background: url("../images/arrow_open.png") no-repeat;
-  transform: rotate(180deg);
-  transition: transform 300ms;
-}
-.boxArticle__header__open {
-  transform: rotate(0deg);
-}
-.boxArticle__header__close {
-  transform: rotate(180deg);
-}
-.boxArticle__content {
-  display: flex;
-  position: relative;
-  background-color: #F6F6F6;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 400;
-  padding: 20px;
-  overflow: hidden;
-  animation: anim_blk 500ms linear both;
-  z-index: 0;
-}
-.boxArticle__content__hidden {
-  animation: anim_blk_close 500ms linear both;
-}
-@media (min-width: 768px) {
-  .boxArticle__content {
-    font-size: 18px;
-  }
-}
-
-/*Styles Fiche logement*/
-/*
-Animations mobile
-*/
-@keyframes M_anim_LRTB {
-  from {
-    transform: translate(-335px, -255px);
-  }
-  to {
-    transform: translate(0px, 0px);
-  }
-}
-@keyframes M_anim_LRBT {
-  from {
-    transform: translate(-335px, 255px);
-  }
-  to {
-    transform: translate(0px, 0px);
-  }
-}
-@keyframes M_anim_RLTB {
-  from {
-    transform: translate(335px, 255px);
-  }
-  to {
-    transform: translate(0px, 0px);
-  }
-}
-@keyframes M_anim_RLBT {
-  from {
-    transform: translate(335px, -255px);
-  }
-  to {
-    transform: translate(0px, 0px);
-  }
-}
-/*
-animations Descktop
-*/
-@keyframes D_anim_LRTB {
-  from {
-    transform: translate(-1240px, -415px);
-  }
-  to {
-    transform: translate(0px, 0px);
-  }
-}
-@keyframes D_anim_LRBT {
-  from {
-    transform: translate(-1240px, 415px);
-  }
-  to {
-    transform: translate(0px, 0px);
-  }
-}
-@keyframes D_anim_RLTB {
-  from {
-    transform: translate(1240px, 415px);
-  }
-  to {
-    transform: translate(0px, 0px);
-  }
-}
-@keyframes D_anim_RLBT {
-  from {
-    transform: translate(1240px, -415px);
-  }
-  to {
-    transform: translate(0px, 0px);
-  }
-}
-.carrousel {
-  display: flex;
-  margin: auto;
-  position: relative;
-  width: 335px;
-  height: 255px;
-  overflow: hidden;
-}
-@media (min-width: 768px) {
-  .carrousel {
-    width: 1240px;
-    height: 415px;
-  }
-}
-.carrousel__div {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 2;
-  width: 335px;
-  height: 255px;
-  background: rgba(211, 211, 211, 0.1803921569);
-}
-@media (min-width: 768px) {
-  .carrousel__div {
-    width: 1240px;
-    height: 415px;
-  }
-}
-.carrousel__img, .carrousel__backrlbt, .carrousel__backrltb, .carrousel__nextlrbt, .carrousel__nextlrtb {
-  width: 335px;
-  height: 255px;
-  object-fit: cover;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-@media (min-width: 768px) {
-  .carrousel__img, .carrousel__backrlbt, .carrousel__backrltb, .carrousel__nextlrbt, .carrousel__nextlrtb {
-    width: 1240px;
-    height: 415px;
-  }
-}
-.carrousel__nextlrtb {
-  animation: M_anim_LRTB 1s linear both;
-}
-@media (min-width: 768px) {
-  .carrousel__nextlrtb {
-    animation: D_anim_LRTB 1s linear both;
-  }
-}
-.carrousel__nextlrbt {
-  animation: M_anim_LRBT 1s linear both;
-}
-@media (min-width: 768px) {
-  .carrousel__nextlrbt {
-    animation: D_anim_LRBT 1s linear both;
-  }
-}
-.carrousel__backrltb {
-  animation: M_anim_RLTB 1s linear both;
-}
-@media (min-width: 768px) {
-  .carrousel__backrltb {
-    animation: D_anim_RLTB 1s linear both;
-  }
-}
-.carrousel__backrlbt {
-  animation: M_anim_RLBT 1s linear both;
-}
-@media (min-width: 768px) {
-  .carrousel__backrlbt {
-    animation: D_anim_RLBT 1s linear both;
-  }
-}
-.carrousel__lnk, .carrousel__lnknext, .carrousel__lnkback {
-  width: 24px;
-  height: 24px;
-  object-fit: cover;
-  position: absolute;
-}
-@media (min-width: 768px) {
-  .carrousel__lnk, .carrousel__lnknext, .carrousel__lnkback {
-    width: 46px;
-    height: 79px;
-  }
-}
-.carrousel__lnkback {
-  top: 100px;
-  left: 10px;
-}
-@media (min-width: 768px) {
-  .carrousel__lnkback {
-    top: 167px;
-    left: 25px;
-  }
-}
-.carrousel__lnknext {
-  top: 100px;
-  right: 10px;
-}
-@media (min-width: 768px) {
-  .carrousel__lnknext {
-    top: 167px;
-    right: 25px;
-  }
-}
-.carrousel__nbImg {
-  position: absolute;
-  bottom: 10px;
-  width: 335px;
-  text-align: center;
-  color: #FFF;
-  font-size: 18px;
-  z-index: 1;
-}
-@media (min-width: 768px) {
-  .carrousel__nbImg {
-    width: 1240px;
-  }
-}
-
-/* Fiche logement identité */
-.logt {
-  width: 335px;
-  margin: auto;
-}
-@media (min-width: 768px) {
-  .logt {
-    width: 1240px;
-  }
-}
-
-.host {
-  display: flex;
-  flex-direction: row;
-  width: 250px;
-  align-items: center;
-  justify-content: end;
-  gap: 5px;
-}
-@media (min-width: 768px) {
-  .host {
-    flex-direction: row;
-  }
-}
-.host__ident {
-  display: flex;
-  flex-direction: column;
-  color: #FF6060;
-  text-align: right;
-  font-size: 12px;
-}
-@media (min-width: 768px) {
-  .host__ident {
-    font-size: 18px;
-    flex-direction: column;
-  }
-}
-.host p {
-  display: flex;
-  margin: 0;
-}
-.host img {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-}
-@media (min-width: 768px) {
-  .host img {
-    width: 64px;
-    height: 64px;
-  }
-}
-
-.tags {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  gap: 10px;
-  margin-top: 30px;
-}
-.tags__item {
-  min-width: 84px;
-  height: 18px;
-  padding: 2px 15px 0 15px;
-  text-align: center;
-  background-color: #FF6060;
-  border-radius: 10px;
-  color: #FFF;
-  font-size: 10px;
-  font-weight: 700;
-  vertical-align: middle;
-}
-@media (min-width: 768px) {
-  .tags__item {
-    min-width: 115px;
-    height: 30px;
-    font-size: 14px;
-    padding: 5px 15px 0 15px;
-  }
-}
-
-.rating {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  width: 98px;
-  height: 18px;
-}
-@media (min-width: 768px) {
-  .rating {
-    width: 196px;
-    height: 36px;
-    justify-content: flex-end;
-  }
-}
-.rating img {
-  height: 14px;
-  width: 14px;
-}
-@media (min-width: 768px) {
-  .rating img {
-    height: 28px;
-    width: 28px;
-  }
-}
-
-.location {
-  display: flex;
-  flex-direction: column;
-  width: 335px;
-  gap: 1em;
-  justify-content: center;
-  margin: 15px auto;
-}
-@media (min-width: 768px) {
-  .location {
-    flex-direction: row;
-    width: 1240px;
-    margin: 25px auto;
-    justify-content: space-between;
-  }
-}
-.location__host {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
-}
-@media (min-width: 768px) {
-  .location__host {
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-  }
-}
-.location h1 {
-  color: #FF6060;
-  font-size: 18px;
-  font-weight: 500;
-}
-@media (min-width: 768px) {
-  .location h1 {
-    font-size: 36px;
-  }
-}
-.location h2 {
-  color: #000;
-  font-size: 14px;
-  font-weight: 500;
-}
-@media (min-width: 768px) {
-  .location h2 {
-    font-size: 18px;
-  }
-}
-
-.details {
-  width: 335px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 30px 0;
-  gap: 30px;
-}
-@media (min-width: 768px) {
-  .details {
-    width: 1240px;
-    flex-direction: row;
-    margin: 50px auto;
-    gap: 70px;
-  }
-}
-
-.detail {
-  display: flex;
-  flex-direction: column;
-  width: 335px;
-}
-@media (min-width: 768px) {
-  .detail {
-    width: 585px;
-  }
-}
-.detail__header {
-  display: flex;
-  flex-direction: row;
-  width: 335px;
-  height: 30px;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
-  background-color: #FF6060;
-  border-radius: 5px;
-  padding: 0 15px;
-  font-size: 13px;
-  font-weight: 700;
-  z-index: 2;
-}
-@media (min-width: 768px) {
-  .detail__header {
-    width: 585px;
-    height: 52px;
-    border-radius: 10px;
-    font-size: 18px;
-  }
-}
-.detail__header__icone {
-  width: 32px;
-  height: 32px;
-  background: url("../images/arrow_open.png") no-repeat;
-  transform: rotate(180deg);
-  transition: transform 300ms;
-}
-.detail__header__open {
-  transform: rotate(0deg);
-}
-.detail__header__close {
-  transform: rotate(180deg);
-}
-.detail__header__icone:hover {
-  cursor: pointer;
-}
-.detail__content {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  background-color: #F6F6F6;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  padding: 10px;
-  overflow: hidden;
-  animation: anim_blk 500ms linear both;
-  z-index: 0;
-}
-.detail__content__hidden {
-  animation: anim_blk_close 500ms linear both;
-}
-@media (min-width: 768px) {
-  .detail__content {
-    font-size: 18px;
-    padding: 20px;
-  }
-}
-
-.hidden {
-  display: none;
-}
-
-.error {
-  display: flex;
-  flex-direction: column;
-  width: 335px;
-  margin: auto;
-  gap: 100px;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 100px;
-}
-@media (min-width: 768px) {
-  .error {
-    width: 1240px;
-  }
-}
-.error__num {
-  color: #FF6060;
-  font-size: 96px;
-  font-weight: 700;
-}
-@media (min-width: 768px) {
-  .error__num {
-    font-size: 250px;
-  }
-}
-.error__lnk {
-  color: #000;
-  text-decoration: underline;
-  font-size: 14px;
-  font-weight: 500;
-}
-@media (min-width: 768px) {
-  .error__lnk {
-    font-size: 18px;
-  }
-}
-.error h1 {
-  color: #FF6060;
-  font-size: 18px;
-  font-weight: 500;
-  text-align: center;
-}
-@media (min-width: 768px) {
-  .error h1 {
-    font-size: 36px;
-  }
-}
-
-/*# sourceMappingURL=styles.css.map */
